--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,6 +26,7 @@
     -->
     <title>React App</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
